# ClimateRisk-Sentinel

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  render.yaml
backend/: Procfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: analysis.py  aoi.py  datasets.py  health.py  version.py
backend/app/db/: models.py  session.py
backend/app/domain/: __init__.py  geo_types.py
backend/app/schemas/: __init__.py  analysis.py  aoi.py  api.py  datasets.py
backend/app/services/: __init__.py  geometry.py  geospatial_analysis.py  metadata_cache.py  stac_pc.py
backend/app/services/analysis/: __init__.py  cache_store.py  infrastructure_osm.py  pipeline.py  presentation.py  pure_indicators.py  raster_readout.py  risk_heuristic.py  stac_items.py  temporal_summary.py
backend/app/utils/: __init__.py  version_info.py
backend/tests/: test_api_smoke.py  test_geometry.py  test_pure_indicators.py  test_risk_heuristic.py  test_temporal_summary.py
docs/screenshots/: README.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: index.css  vite-env.d.ts
frontend/src/geo/: polygonText.ts
frontend/src/hooks/: useAnalysisProgressHint.ts  useClimateRiskWorkflow.ts
frontend/src/lib/: analysisLoadingHints.ts  analysisPayload.ts  api.ts  exportAnalysis.ts  http.ts
frontend/src/types/: domain.ts
(+20 files in other folders)
