[project]
name = "climate-risk-sentinel-api"
version = "0.1.0"
description = "ClimateRisk Sentinel — geospatial risk analysis API (skeleton)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1",
  "uvicorn[standard]>=0.32.0,<1",
  "pydantic>=2.9.0,<3",
  "pydantic-settings>=2.6.0,<3",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
