[project]
name = "climate-risk-sentinel-api"
version = "0.1.0"
description = "ClimateRisk Sentinel — geospatial risk analysis API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1",
  "uvicorn[standard]>=0.32.0,<1",
  "pydantic>=2.9.0,<3",
  "pydantic-settings>=2.6.0,<3",
  "sqlalchemy>=2.0.36,<3",
  "psycopg[binary]>=3.2.0,<4",
  "geoalchemy2>=0.15.0,<1",
  "shapely>=2.0.0,<3",
  "pyproj>=3.6.0,<4",
  "httpx>=0.27.0,<1",
  "pystac-client>=0.8.0,<1",
  "planetary-computer>=1.0.0,<2",
  "numpy>=2.0.0,<3",
  "geopandas>=1.0.0,<2",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
